configure to deploy

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "travel-exotica",
   "version": "1.0.0",
   "description": "Travel booking app",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production&nodemon server.js"
