--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemailer-sendgrid": "^1.0.3",
     "pug": "^3.0.3",
